# PNRR

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: indicators.yml  sources.yml
docs/: methodology.md
notebooks/: 01_data_quality_checks.ipynb  02_national_regional_analysis.ipynb  03_municipal_focus.ipynb  04_final_charts.ipynb
pnrr_analysis/: config.py
script/: config.py
scripts/: config.py  utils.py
scripts/src/: build_pnrr_indicators.py  clean_pnrr_projects.py  download_pnrr_data.py  export_dashboard_data.py  make_pnrr_charts.py  run_pnrr_pipeline.py  test_structure_marker.txt
