[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnrr-analysis"
version = "0.1.0"
description = "Pipeline per analisi territoriale dei dati PNRR"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nazareno Lecis" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
pnrr = "pnrr_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
